--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "carProduct",
   "version": "1.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.8.7",
+    "gzippo": "^0.2.0"
+  },
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
